# d39durchflusssensor

./: CMakeLists.txt  README.md  dkmch_ble.ino  prj.conf
sensor_simulation/: sensor_simulation.ino
src/: config.h  main.c  nmea.c  nmea.h
src/d39_bt/: d39_bt.c  d39_bt.h
src/d39_gpio/: d39_gpio.c  d39_gpio.h
test/: CMakeLists.txt  README.md  main.c  prj.conf
test/src/: main.c
